--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,18 +5,19 @@ homepage:
 
 environment:
   sdk: ">=2.17.3 <3.0.0"
-  flutter: ">=2.5.0"
+  flutter: "3.0.2"
 
 dependencies:
   flutter:
     sdk: flutter
-  plugin_platform_interface: ^2.1.2
+  plugin_platform_interface: ^2.1.3
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^2.0.1
-  pigeon: ^3.2.5
+  pigeon: ^4.1.0
+  analyzer: 4.6.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
