--- a/android/build.gradle
+++ b/android/build.gradle
@@ -49,4 +49,5 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation("com.google.android.gms:play-services-fitness:21.1.0")
     implementation("com.google.android.gms:play-services-auth:20.2.0")
+    implementation 'com.jakewharton.timber:timber:5.0.1'
 }
