--- a/example/android/app/src/main/AndroidManifest.xml
+++ b/example/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,4 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.helloinside.health_connect_flutter_example">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android">
 
     <application
         android:name="${applicationName}"
